# espdrone-aruco-ros

./: .gitignore  README.md
aruco_lib_integration/: CMakeLists.txt  package.xml
aruco_mapping_filter/: package.xml
aruco_mapping_filter/include/: filter.h
aruco_mapping_filter/launch/: aruco_mapping_filter.launch
aruco_mapping_filter/src/: filter.cpp  main.cpp
aruco_msgs/: CMakeLists.txt  package.xml
aruco_msgs/msg/: Marker.msg
aruco_msgs/srv/: PixelToPosition.srv
aruco_ros/: CMakeLists.txt  package.xml
aruco_ros/cfg/: ArucoThreshold.cfg
aruco_ros/include/aruco_ros/: aruco_ros_utils.hpp
aruco_ros/launch/: map.launch  single.launch
aruco_ros/src/: aruco_ros_utils.cpp  map_single.cpp  simple_single.cpp
documentation/: aruco_mip_36h12_a3_size.rar
esp_drone_ros/: CMakeLists.txt  package.xml
esp_drone_ros/include/: image_transport_republisher.hpp
esp_drone_ros/script/: drone_camera_streamer.py
esp_drone_ros/src/: image_transport_republisher.cpp
espdrone_aruco_bringup/: CMakeLists.txt  package.xml
espdrone_aruco_bringup/config/environment/: env_example.yaml
espdrone_aruco_bringup/config/espdrone/: espdrone_example.yaml
espdrone_aruco_bringup/config/espdrone/camera_calib/: ost_example.yaml
espdrone_aruco_bringup/launch/: espdrone_aruco.launch  espdrone_cam_calib.launch  espdrone_server_and_map.launch  realsense_r200_aruco.launch
espdrone_aruco_bringup/script/: launch_espdrone_aruco.py
realsense_camera/: CMakeLists.txt
uavionics_dip_bringup/: CMakeLists.txt  package.xml
uavionics_dip_bringup/config/camera_calib/: ost.yaml
uavionics_dip_bringup/config/environment/: hall.yaml
uavionics_dip_bringup/config/environment/aruco_maps/: hall_map.yml
uavionics_dip_bringup/config/esp_drone/: espdrone1.yaml  espdrone2.yaml
uavionics_dip_bringup/launch/: esp_drone_aruco.launch  esp_drone_cam_calib.launch  realsense_r200_aruco.launch
uavionics_dip_bringup/script/: launch_esp_drones.py
