<?xml version="1.0"?>
<package format="2">
  <name>aruco_lib_integration</name>
  <version>1.0.0</version>
  <description>The aruco_lib_integration package</description>

  <maintainer email="andrianhuang@yahoo.com">Andrian Huang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>