<?xml version="1.0"?>
<package format="2">
  <name>espdrone_aruco_bringup</name>
  <version>1.0.0</version>
  <description>ROS package for ESP-drone ArUco configuration and launch files</description>
  
  <maintainer email="andrianhuang@yahoo.com">Andrian Huang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
